--- a/pages/templates/post.html
+++ b/pages/templates/post.html
@@ -6,6 +6,7 @@
 
     <div class="post-date">
       {{p.created.strftime("%b %d, %Y")}}
+      {{p.key().id()}}
       {{p.getUserName()}}
     </div>
   </div>
