--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link type="text/css" rel="stylesheet" href="/static/main.css" />
+  <link type="text/css" rel="stylesheet"/>
 
   <title>CS 253 Blog</title>
 </head>
@@ -28,4 +28,3 @@
 </body>
 
 </html>
-
