Fixing logout redirect bug, adding styles to login

--- a/pages/templates/signup.html
+++ b/pages/templates/signup.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-
-<html>
-  <head>
-    <title>Sign up form</title>
-    <style type="text/css">
-      .label {text-align: right}
-      .error {color: red}
-    </style>
-
-  </head>
-
-  <body>
+{% extends "base.html" %}
+{% block content %}
     <h2>Signup</h2>
     <form method="post">
       <table>
@@ -65,6 +54,4 @@
 
       <input type="submit">
     </form>
-  </body>
-
-</html>
+{% endblock %}
