Adding styles to login and signup

--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -26,7 +26,7 @@
 
 <body>
 <div class="container">
-  <a href="/blog" class="main-title">
+  <a href="/" class="main-title">
     CS 253 Blog
   </a>
 
