--- a/pages/templates/login.html
+++ b/pages/templates/login.html
@@ -1,12 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
-
-
-      <form class="form-signin" method="post">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <input type="text" name="username" value="{{username}}" class="form-control" placeholder="Username" required="" autofocus="">
-        <input type="password" name="password" class="form-control" placeholder="Password" required="">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <div class="error">{{error}}</div>
-      </form>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
+        <h2>Login</h2>
+    </div>
+    <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
+        <form method="post" role="form">
+            <div class="form-group">
+                <input type="text" class="form-control" name="username" placeholder="Username" value="{{username}}">
+            </div>
+            <div class="form-group">
+                <input type="password" class="form-control" name="password" placeholder="Password" value=""/>
+            </div>
+            {% if error %}
+            <div class="alert alert-danger" role="alert">
+                 {{error}}
+            </div>
+            {% endif %}
+          <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
