--- a/pages/templates/signup.html
+++ b/pages/templates/signup.html
@@ -1,57 +1,44 @@
 {% extends "base.html" %}
 {% block content %}
-    <h2>Signup</h2>
-    <form method="post">
-      <table>
-        <tr>
-          <td class="label">
-            Username
-          </td>
-          <td>
-            <input type="text" name="username" value="{{username}}">
-          </td>
-          <td class="error">
-            {{error_username}}
-          </td>
-        </tr>
-
-        <tr>
-          <td class="label">
-            Password
-          </td>
-          <td>
-            <input type="password" name="password" value="">
-          </td>
-          <td class="error">
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
+    <h2>Sign Up</h2>
+  </div>
+  <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
+    <form method="post" role="form">
+      <div class="form-group">
+        <input type="text" class="form-control" name="username" placeholder="Username" value="{{username}}">
+        {% if error_username %}
+          <div class="alert alert-danger" role="alert">{{error_username}}</div>
+        {% endif %}
+      </div>
+      <div class="form-group">
+        <input type="password" class="form-control" name="password" placeholder="Password"value="">
+        {% if error_password %}
+          <div class="alert alert-danger" role="alert">
             {{error_password}}
-          </td>
-        </tr>
+          </div>
+        {% endif %}
+      </div>
+      <div class="form-group">
+        <input type="password" class="form-control" name="verify" placeholder="Verify password" value="">
+        {% if error_verify %}
+        <div class="alert alert-danger" role="alert">
+          {{error_verify}}
+        </div>
+        {% endif %}
+      </div>
+      <div class="form-group">
+        <input type="email" class="form-control" name="email" placeholder="Email address" value="{{email}}">
+        {% if error_email %}
+        <div class="alert alert-danger" role="alert">
+          {{error_email}}
+        </div>
+        {% endif %}
+      </div>
 
-        <tr>
-          <td class="label">
-            Verify Password
-          </td>
-          <td>
-            <input type="password" name="verify" value="">
-          </td>
-          <td class="error">
-            {{error_verify}}
-          </td>
-        </tr>
-
-        <tr>
-          <td class="label">
-            Email (optional)
-          </td>
-          <td>
-            <input type="text" name="email" value="{{email}}">
-          </td>
-          <td class="error">
-            {{error_email}}
-          </td>
-        </tr>
-      </table>
-
-      <input type="submit">
+      <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
     </form>
+  </div>
+</div>
 {% endblock %}
