--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -7,20 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- link tags for style files -->
     <!-- Font  -->
-	<link href="static/css/font.css" rel="stylesheet">
+	<link href="/static/css/font.css" rel="stylesheet">
     <!-- Boot strap -->
-  <link rel="stylesheet" href="static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <!--  user-custom style-->
-  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="/static/css/style.css">
     <!--  Font awesome-->
-	<link rel="stylesheet" href="static/css/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/static/css/font-awesome/css/font-awesome.min.css">
   <!--  script tags js files-->
     <!--  Jquery-->
-  <script src="static/js/jquery.min.js"></script>
+  <script src="/static/js/jquery.min.js"></script>
     <!--  Bootstrap-->
-  <script src="static/js/bootstrap.min.js"></script>
+  <script src="/static/js/bootstrap.min.js"></script>
     <!-- Custom script -->
-  <script src="static/js/script.js"></script>
+  <script src="/static/js/script.js"></script>
   <title>Welcome to Duc Tran's Blog</title>
 </head>
 
