--- a/pages/templates/post.html
+++ b/pages/templates/post.html
@@ -1,17 +1,16 @@
-<div class="post">
-  <div class="post-heading">
-    <div class="post-title">
-      {{p.subject}}
-    </div>
-
-    <div class="post-date">
+<div>
+    <!-- Post title -->
+      <a href="/blog/{{p.key().id()}}#">
+        {{p.subject}}</a>
+    <!-- Post Info-->
+      <div>
       {{p.created.strftime("%b %d, %Y")}}
       {{p.key().id()}}
       {{p.getUserName()}}
     </div>
   </div>
-
-  <div class="post-content">
+  <!-- Post content -->
+  <div>
     {{p._render_text | safe}}
   </div>
 </div>
