--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -25,25 +25,32 @@
 </head>
 
 <body>
-<div class="container">
-  <a href="/" class="main-title">
-    CS 253 Blog
-  </a>
-
-  <div class="login-area">
-    {% if user %}
-      {{user.name}} (<a class="login-link" href="/logout">logout</a>)
-    {% else %}
-      <a class="login-link" href="/login">login</a>
-      <a class="login-link" href="/signup">signup</a>
-    {% endif %}
+  <div class="container">
+    <nav class="navbar navbar-fixed-top">
+       <a class="navbar-brand" href="/"> DT Blog</a>
+       <ul class="nav navbar-nav">
+       {% if user %}
+         <li class="nav-item">
+           <a class="nav-link" href="/">{{user.name}}</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="/logout">Logout</a>
+         </li>
+      {% else %}
+         <li class="nav-item">
+           <a class="nav-link" href="/login">Login</a>
+         </li>
+         <li class="nav-item pull-right">
+           <a class="nav-link" href="/signup">Sign up</a>
+         </li>
+      {% endif %}
+       </ul>
+    </nav>
+     <div>
+         {% block content %}
+         {% endblock %}
+    </div>
   </div>
 
-  <div id="content">
-  {% block content %}
-  {% endblock %}
-  </div>
-</div>
 </body>
-
 </html>
