Adding cancel edit post, styling likes

--- a/pages/templates/editpost.html
+++ b/pages/templates/editpost.html
@@ -25,7 +25,8 @@
                 {{error}}
             </div>
             {% endif %}
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <input type="submit" class="btn btn-primary">
+            <a class="btn" href="/blog/{{post_id}}">Cancel</a>
         </form>
     </div>
   </div>
