--- a/pages/templates/permalink.html
+++ b/pages/templates/permalink.html
@@ -24,7 +24,8 @@
   <div class="sub-work col-md-12">
       <form method="post" role="form">
           <input type="hidden" class="form-control" id="like" name="like" value="update">
-          <button type="submit" class="btn btn-primary">Like {{numOfLikes}}</button>
+          <button type="submit"class="fa fa-thumbs-up" aria-hidden="true"></button>
+          {{numOfLikes}}
       </form>
   </div>
   <!-- Adding comments -->
