--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -29,12 +29,16 @@
     <nav class="navbar navbar-fixed-top">
        <a class="navbar-brand" href="/"> DT Blog</a>
        <ul class="nav navbar-nav">
+      <!-- Login, logout -->
        {% if user %}
          <li class="nav-item">
            <a class="nav-link" href="/">{{user.name}}</a>
          </li>
          <li class="nav-item">
            <a class="nav-link" href="/logout">Logout</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="/blog/new">Create new post</a>
          </li>
       {% else %}
          <li class="nav-item">
@@ -44,6 +48,7 @@
            <a class="nav-link" href="/signup">Sign up</a>
          </li>
       {% endif %}
+      <!-- End login, logout -->
        </ul>
     </nav>
      <div>
