Fixing div bug on posts

--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -51,10 +51,10 @@
       <!-- End login, logout -->
        </ul>
     </nav>
-     <div>
+    <div class="row">
          {% block content %}
          {% endblock %}
-    </div>
+   </div>
   </div>
 
 </body>
