--- a/pages/templates/front.html
+++ b/pages/templates/front.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+  <div class="row">
   {% for p in posts %}
     {{ p.render() | safe }}
-    <br><br>
   {% endfor %}
-
+  </div>
 {% endblock %}
