--- a/pages/templates/post.html
+++ b/pages/templates/post.html
@@ -1,4 +1,5 @@
 <div>
+  <div>
     <!-- Post title -->
       <a href="/blog/{{p.key().id()}}#">
         {{p.subject}}</a>
@@ -6,8 +7,8 @@
       <div>Created by {{p.getUserName()}} on {{p.created.strftime("%b %d, %Y")}}
     </div>
   </div>
-  <!-- Post content -->
   <div>
+      <!-- Post content -->
     {{p._render_text | safe}}
   </div>
 </div>
