Styling on comments and posts

--- a/pages/templates/post.html
+++ b/pages/templates/post.html
@@ -9,6 +9,8 @@
   </div>
   <div>
       <!-- Post content -->
-    {{p._render_text | safe}}
+    <blockquote>
+        {{p._render_text | safe}}
+    </blockquote>
   </div>
 </div>
