--- a/pages/templates/editcomment.html
+++ b/pages/templates/editcomment.html
@@ -23,7 +23,7 @@
             </div>
             {% endif %}
 
-            <button type="submit">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 </div>
