--- a/pages/templates/permalink.html
+++ b/pages/templates/permalink.html
@@ -33,8 +33,8 @@
       <div>
           <label for="comment">Comment:</label>
           <input type="text" id="comment" name="comment" value="">
+          <button type="submit" class="btn btn-primary">Post</button>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
   </form>
   <!-- Showing comments -->
   {% if new %}
@@ -51,7 +51,8 @@
   {% for c in comments %}
     <div class="row">
     <div class="col-md-8">
-      <p>{{ c.getUserName() }}  {{ c.comment }}</p>
+          {{ c.getUserName() }} said  in {{c.created.strftime("%b %d, %Y")}}
+          <blockquote> {{ c.comment }} </blockquote>
     </div>
     <div class="col-md-4">
       <a class="" href="/blog/deletecomment/{{post.key().id()}}/{{c.key().id()}}">Delete</a>
