--- a/pages/templates/permalink.html
+++ b/pages/templates/permalink.html
@@ -40,7 +40,8 @@
   {% if new %}
   <div class="row">
     <div class="col-md-8">
-      <p>{{ new.getUserName() }}  {{ new.comment }}</p>
+      {{ new.getUserName() }} said  in {{new.created.strftime("%T, %b %d, %Y")}}
+      <blockquote> {{ new.comment }} </blockquote>
     </div>
     <div class="col-md-4">
       <a class="" href="/blog/deletecomment/{{post.key().id()}}/{{new.key().id()}}">Delete</a>
@@ -51,7 +52,7 @@
   {% for c in comments %}
     <div class="row">
     <div class="col-md-8">
-          {{ c.getUserName() }} said  in {{c.created.strftime("%b %d, %Y")}}
+          {{ c.getUserName() }} said  in {{c.created.strftime("%T, %b %d, %Y")}}
           <blockquote> {{ c.comment }} </blockquote>
     </div>
     <div class="col-md-4">
