Checkstyle for comment pages

--- a/pages/templates/editcomment.html
+++ b/pages/templates/editcomment.html
@@ -17,7 +17,7 @@
             </div>
 
             {% if error %}
-            <div role="alert">
+            <div class="alert alert-danger" role="alert">
                 <span aria-hidden="true"></span>
                 {{error}}
             </div>
