Updating url, adding newly added comments on localhost

--- a/pages/templates/permalink.html
+++ b/pages/templates/permalink.html
@@ -37,6 +37,18 @@
       </div>
   </form>
   <!-- Showing comments -->
+  {% if new %}
+    <div class="row">
+      <div class="col-md-8">
+        {{ new.getUserName() }} said  in {{new.created.strftime("%T, %b %d, %Y")}}
+        <blockquote> {{ new.comment }} </blockquote>
+      </div>
+      <div class="col-md-4">
+        <a class="" href="/blog/deletecomment/{{post.key().id()}}/{{new.key().id()}}">Delete</a>
+        <a class="" href="/blog/editcomment/{{post.key().id()}}/{{new.key().id()}}">Edit</a>
+      </div>
+    </div>
+    {% endif%}  
   {% if comments %}
   {% for c in comments %}
     <div class="row">
