--- a/pages/templates/permalink.html
+++ b/pages/templates/permalink.html
@@ -40,7 +40,7 @@
   {% if new %}
     <div class="row">
       <div class="col-md-8">
-        {{ new.getUserName() }} said  in {{new.created.strftime("%T, %b %d, %Y")}}
+        {{ new.username }} said at {{new.created.strftime("%T, %b %d, %Y")}}
         <blockquote> {{ new.comment }} </blockquote>
       </div>
       <div class="col-md-4">
@@ -53,7 +53,7 @@
   {% for c in comments %}
     <div class="row">
     <div class="col-md-8">
-          {{ c.getUserName() }} said  in {{c.created.strftime("%T, %b %d, %Y")}}
+          {{ c.username }} said at {{c.created.strftime("%T, %b %d, %Y")}}
           <blockquote> {{ c.comment }} </blockquote>
     </div>
     <div class="col-md-4">
